[package]
name = "compression-gate-hook"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Standalone example — deliberately OUTSIDE the repo workspace (it is user-facing sample code,
# not part of the busbar build graph).
[workspace]
